*SVN*

* Provide access to the underlying SOAP driver. #6212 [bmilekic, Kent Sibilev]

* Deprecation: update docs. #5998 [jakob@mentalized.net, Kevin Clark]

* ActionWebService WSDL generation ignores HTTP_X_FORWARDED_HOST [Paul Butcher <paul@paulbutcher.com>]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Fixed XMLRPC multicall when one of the called methods returns a struct object. [Kent Sibilev] 

* Replace Reloadable with Reloadable::Deprecated. [Nicholas Seckar]

* Fix invoke_layered since api_method didn't declare :expects. Closes #4720. [Kevin Ballard <kevin@sb.org>, Kent Sibilev]

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Fix test database name typo. [Marcel Molina Jr.]

*1.1.2* (April 9th, 2006)

* Rely on Active Record 1.14.2


*1.1.1* (April 6th, 2006)

* Do not convert driver options to strings (#4499)


*1.1.0* (March 27th, 2006)

* Make ActiveWebService::Struct type reloadable

* Fix scaffolding action when one of the members of a structural type has date or time type

* Remove extra index hash when generating scaffold html for parameters of structural type #4374 [joe@mjg2.com]

* Fix Scaffold Fails with Struct as a Parameter #4363 [joe@mjg2.com]

* Fix soap type registration of multidimensional arrays (#4232)

* Fix that marshaler couldn't handle ActiveRecord models defined in a different namespace (#2392).

* Fix that marshaler couldn't handle structs with members of ActiveRecord type (#1889).

* Fix that marshaler couldn't handle nil values for inner structs (#3576).

* Fix that changes to ActiveWebService::API::Base required restarting of the server (#2390).

* Fix scaffolding for signatures with :date, :time and :base64 types (#3321, #2769, #2078).

* Fix for incorrect casting of TrueClass/FalseClass instances (#2633, #3421).
